examples/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: $APPNAME
  name: $APPNAME
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      run: $APPNAME
  template:
    metadata:
      labels:
        run: $APPNAME
    spec:
      containers:
      - env:
        - name: MENSAGEM
          value: Ambiente $APPNAME
        - name: MEMCACHE_HOST
          value: $MEMCACHE_HOST:11211
        image: rpkatz/12factors:v0.2
        name: $APPNAME
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /factor9
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: $APPNAME
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: $APPNAME
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: $APPNAME
  namespace: default
spec:
  rules:
  - host: $APPNAME.$MINIKUBE_IP.nip.io
    http:
      paths:
      - backend:
          serviceName: $APPNAME
          servicePort: 8080
        path: /
