examples/ingress-affinity.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
  name: app-katz-dev-affinity
  namespace: default
spec:
  rules:
  - host: app-katz-dev-affinity.192.168.99.104.nip.io
    http:
      paths:
      - backend:
          serviceName: app-katz-dev
          servicePort: 8080
        path: /
